# grokmate

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
grokmate/: __init__.py  adb.py  cli.py  db.py  grok.py  state.py
tests/e2e/: test_e2e_message.py  test_image_extraction.py
tests/unit/: test_cli.py  test_db.py  test_grok.py  test_image_extraction.py  test_state.py
