[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grokmate"
version = "0.1.0"
description = "CLI tool to control the Grok Android app via ADB"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "typer[all]>=0.9.0",
    "uiautomator2>=3.0.0",
    "adbutils>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
grokmate = "grokmate.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring a real Android device",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.0",
]
